--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   ],
   "repository": "EmilTholin/node-exchange-autodiscover",
   "dependencies": {
-    "bluebird": "^3.0.6",
-    "request-promise": "^1.0.2",
-    "xml2js": "^0.4.15"
+    "bluebird": "^3.5.1",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2",
+    "xml2js": "^0.4.19"
   }
 }
